# tdr-lsp

./: .gitignore  CMakeLists.txt  Makefile
lsp/: LSPServer.cpp  LSPServer.hpp  main.cpp
vscode-ext/: LICENSE.md  extension.ts  language-configuration.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
vscode-ext/fileicons/: tdr-icon-theme.json
vscode-ext/syntaxes/: scene.tmLanguage.json  tdr-obj.tmLanguage.json  tdr.tmLanguage.json
